--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
+actix-web = "4.0.0-beta.8"
 tokio = { version = "1", features = ["full"] }
 s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.9-alpha", package = "aws-sdk-s3" }
 smithy_http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.9-alpha", package = "smithy-http" }
