--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2018"
 [dependencies]
 actix-web = "4.0.0-beta.8"
 tokio = { version = "1", features = ["full"] }
-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.9-alpha", package = "aws-sdk-s3" }
-smithy_http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.9-alpha", package = "smithy-http" }
-aws_auth = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.9-alpha", package = "aws-auth" }
+s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "aws-sdk-s3" }
+smithy_http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "smithy-http" }
+aws_auth = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "aws-auth" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-log = "0.4.14"
+zip = { version = "0.5", default-features = false, features = ["bzip2"] }
+log = "0.4"
 env_logger = "0.8.4"
+tokio-stream = "0.1"
